<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_school_white_24dp"
            android:title="@string/group_item" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_event_available_white_24dp"
            android:title="@string/event_item" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_folder_special_white_24dp"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_access_time_white_24dp"
            android:title="@string/duty_item" />
    </group>

<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
